update API reference too

--- a/genindex.html
+++ b/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.1922.g02d08b3 documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.1922.g02d08b3.dirty documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
@@ -1354,7 +1354,7 @@
 </li>
       <li><a href="thetis.html#thetis.diagnostics.HessianRecoverer2D">HessianRecoverer2D (class in thetis.diagnostics)</a>
 </li>
-      <li><a href="thetis.html#thetis.utility.ElementContinuity.horizontal">horizontal (thetis.utility.ElementContinuity property)</a>
+      <li><a href="thetis.html#thetis.utility.ElementContinuity.horizontal">horizontal (thetis.utility.ElementContinuity attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.horizontal_diffusivity">horizontal_diffusivity (thetis.options.ModelOptions3d attribute)</a>
 
@@ -1439,6 +1439,8 @@
       <li><a href="thetis.html#thetis.options.ImplicitTracerTimeStepperOptions3d">ImplicitTracerTimeStepperOptions3d (class in thetis.options)</a>
 </li>
       <li><a href="thetis.html#thetis.shallowwater_eq.ShallowWaterTerm.impose_dynamic_bnd">impose_dynamic_bnd() (thetis.shallowwater_eq.ShallowWaterTerm method)</a>
+</li>
+      <li><a href="thetis.html#thetis.configuration.indent">indent() (in module thetis.configuration)</a>
 </li>
       <li><a href="thetis.html#thetis.log.info">info() (in module thetis.log)</a>
 
@@ -3210,7 +3212,7 @@
 </li>
       <li><a href="thetis.html#thetis.limiter.VertexBasedP1DGLimiter">VertexBasedP1DGLimiter (class in thetis.limiter)</a>
 </li>
-      <li><a href="thetis.html#thetis.utility.ElementContinuity.vertical">vertical (thetis.utility.ElementContinuity property)</a>
+      <li><a href="thetis.html#thetis.utility.ElementContinuity.vertical">vertical (thetis.utility.ElementContinuity attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.vertical_diffusivity">vertical_diffusivity (thetis.options.ModelOptions3d attribute)</a>
 </li>
@@ -3286,7 +3288,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2022, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.2.0.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
     </div>
   </body>
 </html>
