add publication (PR#320)

--- a/genindex.html
+++ b/genindex.html
@@ -1,16 +1,17 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; Thetis 0+untagged.1922.g02d08b3.dirty documentation</title>
+    <title>Index &#8212; Thetis 0+untagged.1962.ge771a0c documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/thetis.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
+    <script src="_static/_sphinx_javascript_frameworks_compat.js"></script>
     <script src="_static/doctools.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
@@ -580,10 +581,10 @@
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.check_salinity_overshoot">check_salinity_overshoot (thetis.options.ModelOptions3d attribute)</a>
 </li>
-      <li><a href="thetis.html#thetis.options.SedimentModelOptions.check_sediment_conservation">check_sediment_conservation (thetis.options.SedimentModelOptions attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="thetis.html#thetis.options.SedimentModelOptions.check_sediment_conservation">check_sediment_conservation (thetis.options.SedimentModelOptions attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.options.SedimentModelOptions.check_sediment_overshoot">check_sediment_overshoot (thetis.options.SedimentModelOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.check_temperature_conservation">check_temperature_conservation (thetis.options.ModelOptions3d attribute)</a>
@@ -723,8 +724,6 @@
       <li><a href="thetis.html#thetis.inversion_tools.StationObservationManager.construct_evaluator">construct_evaluator() (thetis.inversion_tools.StationObservationManager method)</a>
 </li>
       <li><a href="thetis.html#thetis.shallowwater_eq.ContinuitySourceTerm">ContinuitySourceTerm (class in thetis.shallowwater_eq)</a>
-</li>
-      <li><a href="thetis.html#thetis.inversion_tools.ControlRegularizationCalculator">ControlRegularizationCalculator (class in thetis.inversion_tools)</a>
 </li>
       <li><a href="thetis.html#thetis.inversion_tools.ControlRegularizationManager">ControlRegularizationManager (class in thetis.inversion_tools)</a>
 </li>
@@ -1006,10 +1005,12 @@
         <li><a href="thetis.html#thetis.utility3d.LinearEquationOfState.eval">(thetis.utility3d.LinearEquationOfState method)</a>
 </li>
       </ul></li>
-      <li><a href="thetis.html#thetis.inversion_tools.ControlRegularizationCalculator.eval_cost_function">eval_cost_function() (thetis.inversion_tools.ControlRegularizationCalculator method)</a>
+      <li><a href="thetis.html#thetis.inversion_tools.ControlRegularizationManager.eval_cost_function">eval_cost_function() (thetis.inversion_tools.ControlRegularizationManager method)</a>
 
       <ul>
-        <li><a href="thetis.html#thetis.inversion_tools.ControlRegularizationManager.eval_cost_function">(thetis.inversion_tools.ControlRegularizationManager method)</a>
+        <li><a href="thetis.html#thetis.inversion_tools.HessianRegularizationCalculator.eval_cost_function">(thetis.inversion_tools.HessianRegularizationCalculator method)</a>
+</li>
+        <li><a href="thetis.html#thetis.inversion_tools.RegularizationCalculator.eval_cost_function">(thetis.inversion_tools.RegularizationCalculator method)</a>
 </li>
         <li><a href="thetis.html#thetis.inversion_tools.StationObservationManager.eval_cost_function">(thetis.inversion_tools.StationObservationManager method)</a>
 </li>
@@ -1156,12 +1157,12 @@
       </ul></li>
       <li><a href="thetis.html#thetis.configuration.FiredrakeCoefficient">FiredrakeCoefficient (class in thetis.configuration)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.configuration.FiredrakeConstantTraitlet">FiredrakeConstantTraitlet (class in thetis.configuration)</a>
 </li>
       <li><a href="thetis.html#thetis.configuration.FiredrakeScalarExpression">FiredrakeScalarExpression (class in thetis.configuration)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="thetis.html#thetis.configuration.FiredrakeVectorExpression">FiredrakeVectorExpression (class in thetis.configuration)</a>
 </li>
       <li><a href="thetis.html#thetis.timezone.FixedTimeZone">FixedTimeZone (class in thetis.timezone)</a>
@@ -1169,6 +1170,14 @@
       <li><a href="thetis.html#thetis.solver.FlowSolver">FlowSolver (class in thetis.solver)</a>
 </li>
       <li><a href="thetis.html#thetis.solver2d.FlowSolver2d">FlowSolver2d (class in thetis.solver2d)</a>
+</li>
+      <li><a href="thetis.html#thetis.diagnostics.ShallowWaterDualWeightedResidual2D.form">form (thetis.diagnostics.ShallowWaterDualWeightedResidual2D property)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.diagnostics.TracerDualWeightedResidual2D.form">(thetis.diagnostics.TracerDualWeightedResidual2D property)</a>
+</li>
+      </ul></li>
+      <li><a href="thetis.html#thetis.utility.form2indicator">form2indicator() (in module thetis.utility)</a>
 </li>
       <li><a href="thetis.html#thetis.timeintegrator.ForwardEuler">ForwardEuler (class in thetis.timeintegrator)</a>
 </li>
@@ -1354,6 +1363,8 @@
 </li>
       <li><a href="thetis.html#thetis.diagnostics.HessianRecoverer2D">HessianRecoverer2D (class in thetis.diagnostics)</a>
 </li>
+      <li><a href="thetis.html#thetis.inversion_tools.HessianRegularizationCalculator">HessianRegularizationCalculator (class in thetis.inversion_tools)</a>
+</li>
       <li><a href="thetis.html#thetis.utility.ElementContinuity.horizontal">horizontal (thetis.utility.ElementContinuity attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions3d.horizontal_diffusivity">horizontal_diffusivity (thetis.options.ModelOptions3d attribute)</a>
@@ -1368,10 +1379,10 @@
 </li>
       <li><a href="thetis.html#thetis.options.CommonModelOptions.horizontal_viscosity">horizontal_viscosity (thetis.options.CommonModelOptions attribute)</a>
 </li>
-      <li><a href="thetis.html#thetis.options.CommonModelOptions.horizontal_viscosity_scale">horizontal_viscosity_scale (thetis.options.CommonModelOptions attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="thetis.html#thetis.options.CommonModelOptions.horizontal_viscosity_scale">horizontal_viscosity_scale (thetis.options.CommonModelOptions attribute)</a>
+</li>
       <li><a href="thetis.html#thetis.momentum_eq.HorizontalAdvectionTerm">HorizontalAdvectionTerm (class in thetis.momentum_eq)</a>
 
       <ul>
@@ -2135,6 +2146,8 @@
 </li>
       <li><a href="thetis.html#thetis.inversion_tools.StationObservationManager.register_observation_data">register_observation_data() (thetis.inversion_tools.StationObservationManager method)</a>
 </li>
+      <li><a href="thetis.html#thetis.inversion_tools.RegularizationCalculator">RegularizationCalculator (class in thetis.inversion_tools)</a>
+</li>
       <li><a href="thetis.html#thetis.inversion_tools.InversionManager.reset_counters">reset_counters() (thetis.inversion_tools.InversionManager method)</a>
 </li>
       <li><a href="thetis.html#thetis.equation.Equation.residual">residual() (thetis.equation.Equation method)</a>
@@ -2238,6 +2251,8 @@
       <li><a href="thetis.html#thetis.options.LinearEquationOfStateOptions.rho_ref">rho_ref (thetis.options.LinearEquationOfStateOptions attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.GLSModelOptions.ri_st">ri_st (thetis.options.GLSModelOptions attribute)</a>
+</li>
+      <li><a href="thetis.html#thetis.inversion_tools.RSpaceRegularizationCalculator">RSpaceRegularizationCalculator (class in thetis.inversion_tools)</a>
 </li>
       <li><a href="thetis.html#thetis.configuration.rst_all_options">rst_all_options() (in module thetis.configuration)</a>
 </li>
@@ -2356,6 +2371,8 @@
       <li><a href="thetis.html#thetis.callback.DiagnosticCallback.set_write_mode">set_write_mode() (thetis.callback.DiagnosticCallback method)</a>
 </li>
       <li><a href="thetis.html#thetis.shallowwater_eq.ShallowWaterContinuityTerm">ShallowWaterContinuityTerm (class in thetis.shallowwater_eq)</a>
+</li>
+      <li><a href="thetis.html#thetis.diagnostics.ShallowWaterDualWeightedResidual2D">ShallowWaterDualWeightedResidual2D (class in thetis.diagnostics)</a>
 </li>
       <li><a href="thetis.html#thetis.shallowwater_eq.ShallowWaterEquations">ShallowWaterEquations (class in thetis.shallowwater_eq)</a>
 </li>
@@ -2513,6 +2530,12 @@
         <li><a href="thetis.html#thetis.tracer_eq.SourceTerm">(class in thetis.tracer_eq)</a>
 </li>
         <li><a href="thetis.html#thetis.tracer_eq_2d.SourceTerm">(class in thetis.tracer_eq_2d)</a>
+</li>
+      </ul></li>
+      <li><a href="thetis.html#thetis.diagnostics.ShallowWaterDualWeightedResidual2D.space">space (thetis.diagnostics.ShallowWaterDualWeightedResidual2D property)</a>
+
+      <ul>
+        <li><a href="thetis.html#thetis.diagnostics.TracerDualWeightedResidual2D.space">(thetis.diagnostics.TracerDualWeightedResidual2D property)</a>
 </li>
       </ul></li>
       <li><a href="thetis.html#thetis.interpolation.SpatialInterpolator">SpatialInterpolator (class in thetis.interpolation)</a>
@@ -2843,8 +2866,6 @@
         <li><a href="thetis.html#module-thetis.turbines">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     thetis.turbulence
 
@@ -2852,6 +2873,8 @@
         <li><a href="thetis.html#module-thetis.turbulence">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     thetis.utility
 
@@ -2969,6 +2992,8 @@
       <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_timestepper_options">tracer_timestepper_options (thetis.options.ModelOptions2d attribute)</a>
 </li>
       <li><a href="thetis.html#thetis.options.ModelOptions2d.tracer_timestepper_type">tracer_timestepper_type (thetis.options.ModelOptions2d attribute)</a>
+</li>
+      <li><a href="thetis.html#thetis.diagnostics.TracerDualWeightedResidual2D">TracerDualWeightedResidual2D (class in thetis.diagnostics)</a>
 </li>
       <li><a href="thetis.html#thetis.tracer_eq.TracerEquation">TracerEquation (class in thetis.tracer_eq)</a>
 </li>
@@ -3288,7 +3313,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016-2022, Tuomas Kärnä et al..
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.5.0.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 5.1.1.
     </div>
   </body>
 </html>
